RESOLVED FIXED219511
Bad IPC from the WebProcess should not terminate the GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=219511
Summary Bad IPC from the WebProcess should not terminate the GPUProcess
Chris Dumez
Reported 2020-12-03 14:55:28 PST
Bad IPC from the WebProcess should not terminate the GPUProcess. The GPUProcess is shared by all WebProcesses and it is not acceptable for a single bad WebProcess to negatively impact other WebProcesses. Instead, we should terminate the bad WebProcess, like the NetworkProcess already does on bad IPC.
Attachments
Patch (7.40 KB, patch)
2020-12-03 15:05 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-12-03 15:05:47 PST
EWS
Comment 2 2020-12-03 16:02:34 PST
Committed r270415: <https://trac.webkit.org/changeset/270415> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415354 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-03 16:03:41 PST
Note You need to log in before you can comment on or make changes to this bug.